--- a/Timesheet/Timesheet.csproj
+++ b/Timesheet/Timesheet.csproj
@@ -9,11 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ApprovalTests" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNet.StaticFiles" Version="1.0.0-rc1-final" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.10" />
+    <PackageReference Include="moq" Version="4.20.72" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="RestAssured.Net" Version="4.4.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.26.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.8.1" />
+    <PackageReference Include="WebDriverManager" Version="2.17.4" />
   </ItemGroup>
 
 </Project>
