--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -11,6 +11,8 @@ jobs:
       - uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '8.0.x'
+      - name: Install Homebrew
+        run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
       - name: Install Google Chrome
         run: brew install --cask google-chrome
       - name: Install ChromeDriver
