Update Chrome drivers attempt #4

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -15,6 +15,8 @@ jobs:
         run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
       - name: Install Google Chrome
         run: brew install --cask google-chrome
+      - name: Add Google Chrome to PATH
+        run: echo "/Applications/Google Chrome.app/Contents/MacOS" >> $GITHUB_PATH
       - name: Install ChromeDriver
         run: |
           CHROME_VERSION=$(google-chrome --version | grep -oE '[0-9.]+')
