--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -17,9 +17,11 @@ jobs:
         run: brew install --cask google-chrome
       - name: Add Google Chrome to PATH
         run: echo "/Applications/Google Chrome.app/Contents/MacOS" >> $GITHUB_PATH
+      - name: Verify Google Chrome Installation
+        run: /Applications/Google\ Chrome.app/Contents/MacOS/Google\ Chrome --version
       - name: Install ChromeDriver
         run: |
-          CHROME_VERSION=$(google-chrome --version | grep -oE '[0-9.]+')
+          CHROME_VERSION=$(/Applications/Google\ Chrome.app/Contents/MacOS/Google\ Chrome --version | grep -oE '[0-9.]+')
           CHROMEDRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION)
           curl -sS -o /tmp/chromedriver.zip https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_mac64.zip
           unzip /tmp/chromedriver.zip -d /usr/local/bin/
