--- a/Timesheet.Test/Timesheet.Test.csproj
+++ b/Timesheet.Test/Timesheet.Test.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
     <PackageReference Include="RestAssured.Net" Version="4.5.1" />
     <PackageReference Include="Selenium.WebDriver" Version="4.27.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
     <PackageReference Include="WebDriverManager" Version="2.17.4" />
   </ItemGroup>
 
